[package]
name = "multithreaded"
version = "0.0.0"
edition = "2018"
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
bincode = "1"
config = "0.10.1"
crossbeam = "0.7.3"
futures = "0.3"
futures-util = "0.3"
ipc-channel = "0.12"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "sync", "rt-core", "io-util", "tcp", "dns", "stream"] }
tokio-util = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["bincode", "json"] }
