[package]
name = "blocking"
version = "0.1.0"
authors = ["Thane Thomson <thane@interchain.io>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "^0.7.3"
log = "^0.4.8"
simple_logger = "^1.3.0"
prost = "^0.5.0"
prost-types = "^0.5.0"
bytes = "^0.4.12"
structopt = "^0.3"

[build-dependencies]
prost-build = "^0.5.0"

