[package]
name = "nonblocking"
version = "0.1.0"
authors = ["Sean Braithwaite <brapse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
crossbeam = "0.7.3"
